testdata/baselines/reference/submodule/conformance/jsdocTemplateTag6.errors.txt
a.js(1,1): error TS8004: Type parameter declarations can only be used in TypeScript files.
a.js(11,64): error TS8004: Type parameter declarations can only be used in TypeScript files.
a.js(23,64): error TS8004: Type parameter declarations can only be used in TypeScript files.
a.js(34,24): error TS8004: Type parameter declarations can only be used in TypeScript files.
a.js(45,54): error TS8004: Type parameter declarations can only be used in TypeScript files.
a.js(56,62): error TS8004: Type parameter declarations can only be used in TypeScript files.
a.js(65,22): error TS8004: Type parameter declarations can only be used in TypeScript files.
a.js(77,40): error TS8004: Type parameter declarations can only be used in TypeScript files.


==== a.js (8 errors) ====
    /**
    ~~~
     * @template const T
    ~~~~~~~~~~~~~~~~~~~~
     * @param {T} x
    ~~~~~~~~~~~~~~~
     * @returns {T}
    ~~~~~~~~~~~~~~~
     */
    ~~~
    function f1(x) {
    ~~~~~~~~~~~~~~~~
        return x;
    ~~~~~~~~~~~~~
    }
    ~
!!! error TS8004: Type parameter declarations can only be used in TypeScript files.
    const t1 = f1("a");
    const t2 = f1(["a", ["b", "c"]]);
    const t3 = f1({ a: 1, b: "c", d: ["e", 2, true, { f: "g" }] });
                                                                   
    
    
    /**
    ~~~
     * @template const T, U
    ~~~~~~~~~~~~~~~~~~~~~~~
     * @param {T} x
    ~~~~~~~~~~~~~~~
     * @returns {T}
    ~~~~~~~~~~~~~~~
     */
    ~~~
    function f2(x) {
    ~~~~~~~~~~~~~~~~
        return x;
    ~~~~~~~~~~~~~
    };
    ~
!!! error TS8004: Type parameter declarations can only be used in TypeScript files.
    const t4 = f2('a');
    const t5 = f2(['a', ['b', 'c']]);
    const t6 = f2({ a: 1, b: "c", d: ["e", 2, true, { f: "g" }] });
                                                                   
    
    
    /**
    ~~~
     * @template const T
    ~~~~~~~~~~~~~~~~~~~~
     * @param {T} x
    ~~~~~~~~~~~~~~~
     * @returns {T[]}
    ~~~~~~~~~~~~~~~~~
     */
    ~~~
    function f3(x) {
    ~~~~~~~~~~~~~~~~
        return [x];
    ~~~~~~~~~~~~~~~
    }
    ~
!!! error TS8004: Type parameter declarations can only be used in TypeScript files.
    const t7 = f3("hello");
    const t8 = f3("hello");
                           
    
    
    /**
    ~~~
     * @template const T
    ~~~~~~~~~~~~~~~~~~~~
     * @param {[T, T]} x
    ~~~~~~~~~~~~~~~~~~~~
     * @returns {T}
    ~~~~~~~~~~~~~~~
     */
    ~~~
    function f4(x) {
    ~~~~~~~~~~~~~~~~
        return x[0];
    ~~~~~~~~~~~~~~~~
    }
    ~
!!! error TS8004: Type parameter declarations can only be used in TypeScript files.
    const t9 = f4([[1, "x"], [2, "y"]]);
    const t10 = f4([{ a: 1, b: "x" }, { a: 2, b: "y" }]);
                                                         
    
    
    /**
    ~~~
     * @template const T
    ~~~~~~~~~~~~~~~~~~~~
     * @param {{ x: T, y: T}} obj
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     * @returns {T}
    ~~~~~~~~~~~~~~~
     */
    ~~~
    function f5(obj) {
    ~~~~~~~~~~~~~~~~~~
        return obj.x;
    ~~~~~~~~~~~~~~~~~
    }
    ~
!!! error TS8004: Type parameter declarations can only be used in TypeScript files.
    const t11 = f5({ x: [1, "x"], y: [2, "y"] });
    const t12 = f5({ x: { a: 1, b: "x" }, y: { a: 2, b: "y" } });
                                                                 
    
    
    /**
    ~~~
     * @template const T
    ~~~~~~~~~~~~~~~~~~~~
     */
    ~~~
    class C {
    ~~~~~~~~~
        /**
    ~~~~~~~
         * @param {T} x
    ~~~~~~~~~~~~~~~~~~~
         */
    ~~~~~~~
        constructor(x) {}
    ~~~~~~~~~~~~~~~~~~~~~
                         
    
    
    
        /**
    ~~~~~~~
    ~~~~~~~
         * @template const U
    ~~~~~~~~~~~~~~~~~~~~~~~~
    ~~~~~~~~~~~~~~~~~~~~~~~~
         * @param {U} x
    ~~~~~~~~~~~~~~~~~~~
    ~~~~~~~~~~~~~~~~~~~
         */
    ~~~~~~~
    ~~~~~~~
        foo(x) {
    ~~~~~~~~~~~~
    ~~~~~~~~~~~~
            return x;
    ~~~~~~~~~~~~~~~~~
    ~~~~~~~~~~~~~~~~~
        }
    ~~~~~
    ~~~~~
!!! error TS8004: Type parameter declarations can only be used in TypeScript files.
    }
    ~
!!! error TS8004: Type parameter declarations can only be used in TypeScript files.
    
    const t13 = new C({ a: 1, b: "c", d: ["e", 2, true, { f: "g" }] });
    const t14 = t13.foo(["a", ["b", "c"]]);
                                           
    
    
    /**
    ~~~
     * @template {readonly unknown[]} const T
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     * @param {T} args
    ~~~~~~~~~~~~~~~~~~
     * @returns {T}
    ~~~~~~~~~~~~~~~
     */
    ~~~
    function f6(...args) {
    ~~~~~~~~~~~~~~~~~~~~~~
        return args;
    ~~~~~~~~~~~~~~~~
    }
    ~
!!! error TS8004: Type parameter declarations can only be used in TypeScript files.
    const t15 = f6(1, 'b', { a: 1, b: 'x' });
    